--- a/starter/highscores.html
+++ b/starter/highscores.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Highscores</title>
-
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
 
@@ -17,7 +16,7 @@
       <a href="index.html"><button>Go Back</button></a>
       <button id="clear">Clear Highscores</button>
     </div>
-
-    <script src="assets/js/logic.js"></script>
+    <script src='assets/js/scores.js'></script>
+    <script src='assets/js/logic.js'></script>
   </body>
 </html>
