--- a/starter/index.html
+++ b/starter/index.html
@@ -28,6 +28,7 @@
       <div id="questions" class="hide">
         <h2 id="question-title"></h2>
         <div id="choices" class="choices"></div>
+        <p id="message" class="message"></p>
       </div>
 
       <div id="end-screen" class="hide">
@@ -35,14 +36,14 @@
         <p>Your final score is <span id="final-score"></span>.</p>
         <p>
           Enter initials: <input type="text" id="initials" max="3" />
-          <button id="submit">Submit</button>
+          <a href="highscores.html"><button id="submit">Submit</button></a>
         </p>
       </div>
 
       <div id="feedback" class="feedback hide"></div>
     </div>
 
-    <script src="assets/js/questions.js"></script>
+    <script src="assets/js/questionset.js"></script>
     <script src="assets/js/logic.js"></script>
   </body>
 </html>
